syntax = "proto3";

package noble.dollar.vaults.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "noble/dollar/vaults/v1/vaults.proto";

option go_package = "dollar.noble.xyz/types/vaults";

// GenesisState defines the genesis state of the Noble Dollar Vaults submodule.
message GenesisState {
  // owner is the account that controls the Noble Dollar Vaults.
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  repeated vaults.v1.PositionEntry positions = 2 [(gogoproto.nullable) = false];
  repeated vaults.v1.RewardsRecord rewards = 3 [(gogoproto.nullable) = false];
  string total_flexible_principal = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  vaults.v1.PausedType paused = 5;
}
